name: Cb
version: 0.0.1
cabal-version: >= 1.16
author: Jared G. Roesch
build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: 
    Cb.Parser
    Cb.CbSyn
  build-depends:
    base >= 4 && <= 5,
    parsec >= 3,
    text >= 0.11 && <= 0.12,
    mtl >= 2.1,
    transformers >= 0.3.0.0

