name: cb
version: 0.0.1
cabal-version: >= 1.18
author: Jared G. Roesch
build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Cb
    Cb.Parser.Parser
    Cb.Parser.LanguageDef
    Cb.Parser.Layout
    Cb.Parser.Literal
    Cb.Parser.Term
    Cb.Syntax.Binding
    Cb.Syntax.Id
    Cb.Syntax.Literal
    Cb.Syntax.Term
    Cb.Syntax.Type
  build-depends:
    base >= 4 && <= 5,
    parsec >= 3,
    text >= 0.11 && <= 0.12,
    mtl >= 2.1,
    transformers >= 0.3.0.0,
    bound >= 0.9

executable cbi
  default-language: Haskell2010
  hs-source-dirs: repl
  main-is: Main.hs
  build-depends:
    base >= 4 && <= 5,
    parsec >= 3,
    text >= 0.11 && <= 0.12,
    haskeline,
    cb
